--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                     </div>
                     <div class="input-field col s12 l3">
                         <input autocomplete="off" type="text" id="cidade" class="validate" data-leght="30">
-                        <label for="number" data-error="wrong" data-success="right">Qual cidade você mora?</label>
+                        <label for="cidade" data-error="wrong" data-success="right">Qual cidade você mora?</label>
                     </div>
                     <div class="input-field col s12 l3">
                         <input autocomplete="off" type="text" id="estado" class="validate" data-leght="30">
-                        <label for="number" data-error="wrong" data-success="right">Qual estado?</label>
+                        <label for="estado" data-error="wrong" data-success="right">Qual estado?</label>
                     </div>
                     <div class="input-field col s12">
                         <textarea id="textarea1" class="materialize-textarea" data-leght="250"></textarea>
